# onsets_and_frames_tensorrt

./: .gitignore  README.md  torch1.7.yaml
cpp/: CMakeLists.txt  amt.cpp  config.h
cpp/librosa/include/: librosa.h
cpp/librosa/test/: test.cc  wavreader.c
models/: .gitignore
python/onsets-and-frames/: .gitignore  requirements.txt  train.py  transcribe.py
python/onsets-and-frames/onsets_and_frames/: constants.py  dataset.py  decoding.py  lstm.py  mel.py  transcriber.py  utils.py
python/tools/: convert_onnx2trt.py  convert_pt2onnx.py  convert_pt2wts.py  post.py
test/: test_amt.py
test/eigen/: CMakeLists.txt  eigen.cpp
test/mel/: CMakeLists.txt  split_audio.cpp  test_mel.cpp  test_mel.py
test/midifile/: CMakeLists.txt  encode_midi.cpp  parse_midi.py
